--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width">
-    <title>Qin Zeng</title>
+    <title>Zeng Qin</title>
     <style>
       body{margin:0;padding:0;width:100vw;height:100vh;display:flex;justify-content:center;align-items:center;background:#000;color:#0f0;transition:background 5s linear;}
       code{font-family:Courier;font-size:16px;line-height:20px;transition: color 5s linear;}
