update for lighthouse

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="keywords" content="zengqin, qinzeng, zackmore, zackmoredev">
+    <meta name="description" content="zengqin@www">
     <title>Zeng Qin</title>
     <style>
       @keyframes colorfulStripeChange { 100% { filter: hue-rotate(360deg); } } body { margin:0;padding:0;width:100vw;height:100vh; } div{ width: 100%; height: 100%; display:flex;justify-content:center;align-items:center;color:#fff; background: linear-gradient(limegreen, transparent), linear-gradient(90deg, skyblue, transparent), linear-gradient(-90deg, coral, transparent); background-blend-mode: screen; animation: colorfulStripeChange 5s infinite linear; } code{font-family:Courier;font-size:16px;line-height:20px;}
